# reverse-engineering-assistant

./: .env.example  .gitignore  .markdownlint.json  BATCH_SUPPORT_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_FUNCTION_ANALYSIS.md  GET_FUNCTIONS_COMPREHENSIVE_MODE.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  build-and-install.ps1  build.gradle  extension.properties  gradle.properties  new_tool_list.md  pyproject.toml  run-all-tests.ps1
.pytest_cache/v/cache/: lastfailed  nodeids
ReVa/: LICENSE
ReVa/skills/deep-analysis/: patterns.md
docs/: DISABLED_TOOLS_REFACTORING.md  FUNCTION_TAGS_GUIDE.md  GHIDRA_SCRIPTS_ANALYSIS.md  INTELLIGENT_FEATURES.md  PROJECT_AUTHENTICATION_GUIDE.md  PROJECT_LOCKING.md  SAVING_CHANGES_ANALYSIS.md  SHARED_PROJECT_AUTHENTICATION.md  TOOLS_NEEDED_SUMMARY.md  UPSTREAM_TOOLS_ANALYSIS.md
scripts/: test_multi_program.py  test_multi_program_workflow.py
src/main/java/reva/headless/: RevaHeadlessLauncher.java
src/main/java/reva/plugin/: RevaApplicationPlugin.java  RevaPlugin.java  RevaProgramManager.java
src/main/java/reva/plugin/config/: ToolOptionsBackend.java
src/main/java/reva/resources/impl/: ProgramDocumentationResource.java  ProgramListResource.java  RevaDebugInfoResource.java  StaticAnalysisResultsResource.java
src/main/java/reva/server/: CLAUDE.md  KeepAliveFilter.java  McpServerManager.java
src/main/java/reva/tools/: AbstractToolProvider.java  CLAUDE.md
src/main/java/reva/tools/bookmarks/: BookmarkToolProvider.java  CLAUDE.md
src/main/java/reva/tools/callgraph/: CallGraphToolProvider.java
src/main/java/reva/tools/comments/: CommentToolProvider.java
src/main/java/reva/tools/constants/: CLAUDE.md  ConstantSearchToolProvider.java
src/main/java/reva/tools/data/: DataToolProvider.java
src/main/java/reva/tools/dataflow/: CLAUDE.md  DataFlowToolProvider.java
src/main/java/reva/tools/datatypes/: DataTypeToolProvider.java
src/main/java/reva/tools/decompiler/: DecompilerToolProvider.java
src/main/java/reva/tools/functions/: CLAUDE.md  FunctionToolProvider.java
src/main/java/reva/tools/getfunction/: CLAUDE.md  GetFunctionToolProvider.java
src/main/java/reva/tools/imports/: CLAUDE.md  ImportExportToolProvider.java
src/main/java/reva/tools/memory/: CLAUDE.md  MemoryToolProvider.java
src/main/java/reva/tools/project/: CLAUDE.md  ProjectToolProvider.java
src/main/java/reva/util/: DataTypeParserUtil.java  DecompilationContextUtil.java  DecompilationDiffUtil.java  DecompilationReadTracker.java  EnvConfigUtil.java  FunctionFingerprintUtil.java  IntelligentBookmarkUtil.java  MemoryUtil.java  ProgramLookupUtil.java  ProjectUtil.java  RevaToolLogger.java  SchemaUtil.java  SmartSuggestionsUtil.java  ToolLogCollector.java
src/main/resources/: logback.xml
src/reva_cli/: __main__.py  launcher.py  project_manager.py  stdio_bridge.py  watchdog.py
src/test.slow/java/reva/: RevaIntegrationTestBase.java
src/test.slow/java/reva/plugin/: RevaPluginMcpIntegrationTest.java
src/test.slow/java/reva/tools/: CrossToolWorkflowIntegrationTest.java  ErrorHandlingIntegrationTest.java
src/test/java/reva/plugin/: ConfigChangeTest.java  RevaPluginHeadlessIntegrationTest.java
tests/: conftest.py  test_cli_e2e.py  test_mcp_tools.py
(+53 files in other folders)
